# serializer version: 1
# name: test_cell_merge_and_split[merged]
  '''
  <a:tbl xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main">
    <a:tblGrid>
      <a:gridCol w="100"/>
      <a:gridCol w="100"/>
    </a:tblGrid>
    <a:tr h="100">
      <a:tc rowSpan="2" gridSpan="2">
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p>
            <a:r>
              <a:t>A</a:t>
            </a:r>
          </a:p>
          <a:p>
            <a:r>
              <a:t>B</a:t>
            </a:r>
          </a:p>
          <a:p>
            <a:r>
              <a:t>C</a:t>
            </a:r>
          </a:p>
          <a:p>
            <a:r>
              <a:t>D</a:t>
            </a:r>
          </a:p>
        </a:txBody>
      </a:tc>
      <a:tc rowSpan="2" hMerge="1">
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
    </a:tr>
    <a:tr h="100">
      <a:tc gridSpan="2" vMerge="1">
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
      <a:tc hMerge="1" vMerge="1">
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
    </a:tr>
  </a:tbl>
  
  '''
# ---
# name: test_cell_merge_and_split[split]
  '''
  <a:tbl xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main">
    <a:tblGrid>
      <a:gridCol w="100"/>
      <a:gridCol w="100"/>
    </a:tblGrid>
    <a:tr h="100">
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p>
            <a:r>
              <a:t>A</a:t>
            </a:r>
          </a:p>
          <a:p>
            <a:r>
              <a:t>B</a:t>
            </a:r>
          </a:p>
          <a:p>
            <a:r>
              <a:t>C</a:t>
            </a:r>
          </a:p>
          <a:p>
            <a:r>
              <a:t>D</a:t>
            </a:r>
          </a:p>
        </a:txBody>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
    </a:tr>
    <a:tr h="100">
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
      <a:tc>
        <a:txBody>
          <a:bodyPr/>
          <a:lstStyle/>
          <a:p/>
        </a:txBody>
      </a:tc>
    </a:tr>
  </a:tbl>
  
  '''
# ---
